# FPI

./: CMakeLists.txt  backup.cpp  main.cpp  operations.cpp  operations.h  save_image  save_img.cpp
modules/: desktop.cpp  hist  histogram.cpp  save_img.cpp
